# ap-firmware-checker

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  env.dist
src/: ap.rs  main.rs  sample_data.json
