[package]
name = "ap_firmware_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.24", features = ["rt-multi-thread", "macros"] }
ureq = "2.6.1"
twilight-http = "0.14.1"
tracing-subscriber = "0.3.16"
twilight-model = "0.14.2"
